<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.2</version>
        <relativePath/>
    </parent>

    <packaging>pom</packaging>
    <groupId>io.cordys</groupId>
    <artifactId>cordys-crm</artifactId>
    <version>${revision}</version>
    <name>cordys-crm</name>

    <properties>
        <revision>1.0.x</revision>
        <java.version>21</java.version>
        <shiro.version>2.0.2</shiro.version>
        <easyexcel.version>4.0.3</easyexcel.version>
        <pagehelper.version>6.1.0</pagehelper.version>
        <quartz-starter.version>1.0.7</quartz-starter.version>
        <redisson-starter.version>3.43.0</redisson-starter.version>
        <mybatis-starter.version>3.0.3</mybatis-starter.version>
        <springdoc-openapi-ui.version>2.7.0</springdoc-openapi-ui.version>
        <flatten.version>1.6.0</flatten.version>
        <embedded.version>3.1.6</embedded.version>
        <mail.version>2.0.3</mail.version>
        <!-- frontend -->
        <frontend-maven-plugin.version>1.15.1</frontend-maven-plugin.version>
        <node.version>v22.11.0</node.version>
        <pnpm.version>9.14.4</pnpm.version>
        <!--        -->
        <skipAntRunForJenkins>false</skipAntRunForJenkins>
        <jacoco.version>0.8.12</jacoco.version>
        <!--   sonar     -->
        <sonar.organization>cordys-dev</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <commons-collections4.version>4.4</commons-collections4.version>
        <commons-text.version>1.13.0</commons-text.version>
        <commons-io.version>2.18.0</commons-io.version>
        <testcontainers.version>1.20.4</testcontainers.version>
        <kotlin.version>2.0.21</kotlin.version>
        <persistence-api.version>3.2.0</persistence-api.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib-jdk8</artifactId>
            <version>${kotlin.version}</version>
        </dependency>
    </dependencies>


    <modules>
        <module>frontend</module>
        <module>backend</module>
    </modules>

    <build>
        <resources>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.properties</include>
                    <include>**/*.xml</include>
                    <include>**/*.json</include>
                    <include>**/*.tpl</include>
                    <include>**/*.js</include>
                </includes>
                <filtering>false</filtering>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*</include>
                </includes>
                <filtering>false</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten.version}</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <configuration>
                    <excludes>
                        <exclude>io/cordys/crm/*/mapper/**</exclude>
                        <exclude>io/cordys/crm/*/domain/**</exclude>
                        <exclude>io/cordys/common/**</exclude>
                        <exclude>io/cordys/config/**</exclude>

                        <exclude>io/cordys/aspectj/**</exclude>
                        <exclude>io/cordys/mybatis/**</exclude>
                        <exclude>io/cordys/security/**</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
                <version>${kotlin.version}</version>
                <executions>
                    <execution>
                        <id>compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>test-compile</id>
                        <phase>test-compile</phase>
                        <goals>
                            <goal>test-compile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <jvmTarget>1.8</jvmTarget>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <executions>
                    <execution>
                        <id>default-compile</id>
                        <phase>none</phase>
                    </execution>
                    <execution>
                        <id>default-testCompile</id>
                        <phase>none</phase>
                    </execution>
                    <execution>
                        <id>compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>testCompile</id>
                        <phase>test-compile</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <distributionManagement>
        <repository>
            <id>cordys-public</id>
            <url>https://repository.fit2cloud.com/repository/cordys/</url>
        </repository>
    </distributionManagement>
    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
        <repository>
            <id>cordys-public</id>
            <url>https://repository.fit2cloud.com/repository/cordys/</url>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </pluginRepository>
        <pluginRepository>
            <id>cordys-public</id>
            <url>https://repository.fit2cloud.com/repository/cordys/</url>
        </pluginRepository>
    </pluginRepositories>

</project>
